fixed the problem of main content overflowing across social media icons

--- a/style/style.css
+++ b/style/style.css
@@ -52,6 +52,7 @@ html, body {
   display: flex;
   flex-direction: row;
   height: 100%;
+  overflow: auto; 
 }
   .picture-cover{
     flex:2.5;
